style/style.css
/*Import Files*/

@import url(https://fonts.googleapis.com/css?family=Lato:100);
/*Main Document Settings and Variables*/

:root {
  --maxwidth: 600px;
  --iconwidth: 90px;
  --borderwidth: 3px;
  --headerheight: 120px;
  --elementspacing: 5px;
}

* {
  border-radius: 5px;
  color: white;
  font-family: 'Lato';
  font-weight: 1000;
  box-sizing: border-box;
  margin: 0 auto;
}

body {
  background-image: url("../img/weiskotten.jpg");
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
  max-width: var(--maxwidth);
  margin: 0 auto;
}

/*Class Files*/

.header-pane {
  border: 3px solid white;
  background-color: rgba(78, 181, 241, .7);
  width: 100%;
  margin-top: 30px;
  margin-bottom: var(--elementspacing);
}

.row-distribution {
  text-align: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  vertical-align: middle;
  align-items: center;
}

.column-distribution {
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
  vertical-align: middle;
}

.upstate-seal {
  content: url('../img/upstate-seal.png');
  display: block;
  float: left;
  margin: 10px;
  height: 90px;
}

/* Javascript HTML Values */

#clockVals {
  font-size: 50px;
}

#dateVals {
  font-size: 35px;
  margin: 0;
  padding-bottom: 6px;
  padding-top: -6px;
}

#showTemp {
  font-size: 75px;
}

#showDesc {
  font-size: 30px;
  text-transform: capitalize;
}

/* Search Input */

.search-form {
  width: 100%;
  margin-bottom: var(--elementspacing);
}

.search-query {
  width: 100%;
  border: 3px solid rgb(78, 181, 241);
  text-indent: 8px;
  font-size: 20px;
  color: black;
  padding: 12px 10px 12px 40px;
}
.search-query:focus {
  outline: none;
}

.uptodate-icon {
  background-image: url('../img/uptodate.png');
  background-position: left;
  background-repeat: no-repeat;
  background-position: 10px;
  background-size: 28px;
}

/* Link Buttons */

.container {
  width: 100%;
  max-height: 270px;
  min-height: 200px;
  height: 100%;
}

.link-btn {
  width: 100%;
  display: block;
  padding: 0.5em 0em;
  margin-top: 0;
  margin-bottom: var(--elementspacing);
  border: 3px solid white;
  text-decoration: none;
  font-size: 20px;
  text-align: center;
  transition: all .25s;
  background: rgb(78, 181, 241, .7)
}

.link-btn:hover {
  color: rgb(78, 181, 241);
  border: 3px solid rgb(78, 181, 241);
  border-radius: 2em;
  background-color: white;
}

.left-column {
  width: calc(50% - .5*var(--elementspacing));
  float: left;
}

.right-column {
  width: calc(50% - .5*var(--elementspacing));
  float: right;
}

.weather-pane {
  width: 100%;
  height: 100%;
  background-color: rgba(78, 181, 241, .7);
  border: 3px solid white;
  padding: 0.2em 1.2em;
  text-decoration: none;
  color: white;
}

@media screen and (min-width: 600px) {
  .upstate-logo-left {
    .upstate-logo-small {
      display: none
    }
    ;
    .upstate-logo-left {
      display: none
    }
    ;
  }
}

.upstate-logo-small {
  height: 10px;
  width: 19px;
  background-image: url('../img/upstate_seal.png');
  display: none;
}

.upstate-weather {
  font-size: 20px;
  margin: 0;
}

.weather-row {
  float: left;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.btn-icon {
  width: 90px;
  height: 90px;
  background-color: white;
  border: solid #fff;
  border-width: 3px;
  position: relative;
  margin: 0;
}

.showWeatherIcon {
  text-align: center;
}

.buttonRow {
  width: 100%;
  height: 100%;
  float: left;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#wicon {
  width: 150px;
}

.rightColumnHoriz {
  width: 50%;
  float: right;
  display: flex;
  height: auto;
  justify-content: space-between;
  margin-left: 2.5px;
  height: 100%;
}

.vert {
  flex-direction: column;
}

.rightColumn {
  width: 50%;
  height: 100%;
  display: table;
  float: right;
  margin-left: 2.5px;
}

.horiz {
  /*flex-direction: row;*/
}

.namecredits {
  position: absolute;
  bottom: 8px;
  right: 8px;
  font-size: 18px;
  color: #474646;
  font-weight: 1000;
}

